--- a/insight.org
+++ b/insight.org
@@ -4,6 +4,7 @@
 * backlog
 ** TODO get views and subscriptions to work
    :CLOCK:
+   CLOCK: [2016-12-02 Fri 08:48]--[2016-12-02 Fri 09:18] =>  0:30
    CLOCK: [2016-12-01 Thu 10:30]--[2016-12-01 Thu 10:51] =>  0:21
    CLOCK: [2016-12-01 Thu 10:02]--[2016-12-01 Thu 10:30] =>  0:28
    CLOCK: [2016-12-01 Thu 09:14]--[2016-12-01 Thu 10:02] =>  0:48
@@ -71,6 +72,11 @@ CLOCK: [2016-10-24 Mon 04:44]--[2016-10-24 Mon 05:59] =>  1:15
 - https://github.com/Day8/re-frame-template
 - XXX https://github.com/Day8/re-com
 - XXX https://github.com/kristianmandrup/slush-reframe
+** TODO [[https://github.com/magomimmo/modern-cljs][modern-cljs]]
+   :CLOCK:
+   CLOCK: [2016-11-15 Tue 06:10]--[2016-11-15 Tue 07:03] =>  0:53
+   :END:
+** [[https://github.com/gf3/secretary/][secretary]] + [[https://github.com/venantius/accountant][accountant]]
 ** [[https://github.com/plumatic/schema][schema]] / [[http://clojure.org/about/spec][clojure.spec]]
 *** http://www.lispcast.com/clojure.spec-vs-schema
 *** http://blog.cognitect.com/blog/2016/5/23/introducing-clojurespec
@@ -78,6 +84,8 @@ CLOCK: [2016-10-24 Mon 04:44]--[2016-10-24 Mon 05:59] =>  1:15
 ** deferred
 *** TODO [[https://github.com/boot-clj/boot#install][boot]]
     :CLOCK:
+    CLOCK: [2016-11-15 Tue 06:03]--[2016-11-15 Tue 06:10] =>  0:07
+    CLOCK: [2016-11-15 Tue 05:48]--[2016-11-15 Tue 06:03] =>  0:15
     CLOCK: [2016-11-15 Tue 05:35]--[2016-11-15 Tue 05:47] =>  0:12
     CLOCK: [2016-11-15 Tue 05:20]--[2016-11-15 Tue 05:35] =>  0:15
     CLOCK: [2016-11-13 Sun 05:20]--[2016-11-13 Sun 07:15] =>  1:55
