--- a/insight.org
+++ b/insight.org
@@ -18,8 +18,11 @@
     :ARCHIVE_TIME: 2016-11-29 Tue 10:21
     :END:
     :CLOCK:
+    CLOCK: [2017-04-25 Tue 09:08]--[2017-04-25 Tue 09:22] =>  0:14
     CLOCK: [2016-11-29 Tue 09:18]--[2016-11-29 Tue 09:30] =>  0:12
     :END:
+ - [2017-04-25 Tue] removed re-com
+ - [2017-04-22 Sat] lein new re-frame insight +cider +test +routes +re-frisk +re-com +garden
  - lein new re-frame insight +cider +secretary +garden
    - https://github.com/Day8/re-frame
    - https://github.com/Day8/re-frame-template
@@ -53,7 +56,7 @@ CLOCK: [2016-10-24 Mon 04:20]--[2016-10-24 Mon 04:44] =>  0:24
 **** auto backup on cloud
 ***** differentiate users (oauth2)
 ** technical
-*** lein new re-frame dr-dr +cider +test +garden +secretary
+***
 *** chrome app
 **** https://developer.chrome.com/apps/about_apps
 **** https://github.com/nwjs/nw.js/tree/master
@@ -64,6 +67,8 @@ CLOCK: [2016-10-24 Mon 04:44]--[2016-10-24 Mon 05:59] =>  1:15
 :END:
 ** TODO [[reagent][re-frame]]
    :CLOCK:
+   CLOCK: [2017-04-22 Sat 16:39]--[2017-04-22 Sat 17:01] =>  0:22
+   CLOCK: [2017-04-22 Sat 14:47]--[2017-04-22 Sat 16:19] =>  1:32
    CLOCK: [2016-11-29 Tue 09:30]--[2016-11-29 Tue 10:21] =>  0:51
    :END:
 - https://github.com/Day8/re-frame
@@ -104,6 +109,16 @@ CLOCK: [2016-10-24 Mon 04:44]--[2016-10-24 Mon 05:59] =>  1:15
  CLOCK: [2016-11-02 Wed 04:07]--[2016-11-02 Wed 05:45] =>  1:38
  :END:
 * trouble-shooting
+** cljs + cider
+   - https://github.com/bhauman/lein-figwheel/wiki/Using-the-Figwheel-REPL-within-NRepl#integration-with-emacscider
+     - do `lein repl` instead of `lein figwheel dev`
+     - `C-c M-c` from inside emacs to connect to repl
+     - (do (require '[figwheel-sidecar.repl-api :as ra])
+           (ra/start-figwheel!)
+           (ra/cljs-repl))
+     - now `C-c M-n` (change ns) works
+     - (println "hello") works too!
+     - yay!
 ** TODO lighttable
    :CLOCK:
    CLOCK: [2016-11-04 Fri 05:40]--[2016-11-04 Fri 05:52] =>  0:12
