--- a/insight.org
+++ b/insight.org
@@ -11,6 +11,12 @@
    :END:
 - views + subscription breaks if i add "(reaction" to the subscription function
 - check against https://github.com/Day8/re-frame/tree/master/examples
+** TODO basic page structure
+   :CLOCK:
+   CLOCK: [2017-05-06 Sat 09:19]--[2017-05-06 Sat 09:51] =>  0:32
+   CLOCK: [2017-05-06 Sat 08:52]--[2017-05-06 Sat 09:17] =>  0:25
+   CLOCK: [2017-05-06 Sat 08:20]--[2017-05-06 Sat 08:52] =>  0:32
+   :END:
 ** Archive :ARCHIVE:
 *** DONE initial setup
     CLOSED: [2016-11-29 Tue 10:21]
@@ -67,6 +73,7 @@ CLOCK: [2016-10-24 Mon 04:44]--[2016-10-24 Mon 05:59] =>  1:15
 :END:
 ** TODO [[reagent][re-frame]]
    :CLOCK:
+   CLOCK: [2017-04-27 Thu 09:15]--[2017-04-27 Thu 10:13] =>  0:58
    CLOCK: [2017-04-25 Tue 09:34]--[2017-04-25 Tue 10:15] =>  0:41
    CLOCK: [2017-04-22 Sat 16:39]--[2017-04-22 Sat 17:01] =>  0:22
    CLOCK: [2017-04-22 Sat 14:47]--[2017-04-22 Sat 16:19] =>  1:32
@@ -124,8 +131,13 @@ CLOCK: [2016-10-24 Mon 04:44]--[2016-10-24 Mon 05:59] =>  1:15
      - now `C-c M-n` (change ns) works
      - (println "hello") works too!
      - yay!
-** TODO lighttable
-   :CLOCK:
-   CLOCK: [2016-11-04 Fri 05:40]--[2016-11-04 Fri 05:52] =>  0:12
-   CLOCK: [2016-11-03 Thu 07:00]--[2016-11-03 Thu 07:15] =>  0:15
-   :END:
+** Archive :ARCHIVE:
+*** DONE lighttable
+    CLOSED: [2017-05-05 Fri 15:03]
+    :PROPERTIES:
+    :ARCHIVE_TIME: 2017-05-05 Fri 15:03
+    :END:
+    :CLOCK:
+    CLOCK: [2016-11-04 Fri 05:40]--[2016-11-04 Fri 05:52] =>  0:12
+    CLOCK: [2016-11-03 Thu 07:00]--[2016-11-03 Thu 07:15] =>  0:15
+    :END:
